--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -1,9 +1,7 @@
 name: Deploy AWS Infrastructure
 
 on:
-  push:
-    branches:
-      - main
+  workflow_dispatch:
 
 # jobs:
 #   deploy:
@@ -38,23 +36,29 @@ jobs:
     # Install the latest version of Terraform CLI and configure the Terraform CLI configuration file with a Terraform Cloud user API token
     - name: Setup Terraform
       uses: hashicorp/setup-terraform@v3
-      with:
-        terraform_version: 1.5.0
 
     # Initialize a new or existing Terraform working directory by creating initial files, loading any remote state, downloading modules, etc.
     - name: Terraform Init
-      run: terraform init -chdir=infra
+      run: |
+        cd infra
+        terraform init
 
     # Checks that all Terraform configuration files adhere to a canonical format
     - name: Terraform Format
-      run: terraform fmt -check -chdir=infra
+      run: |
+        cd infra
+        terraform fmt -check
 
     # Generates an execution plan for Terraform
     - name: Terraform Plan
-      run: terraform plan -input=false -chdir=infra
+      run: |
+        cd infra
+        terraform plan -input=false
 
       # On push to "main", build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
     - name: Terraform Apply
       if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
-      run: terraform apply -auto-approve -input=false -chdir=infra -var "zone_id=${{ secrets.TF_VAR_ZONE_ID }}"
+      run: |
+        cd infra
+        terraform apply -auto-approve -input=false -var "zone_id=${{ secrets.TF_VAR_ZONE_ID }}"
