--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -22,13 +22,11 @@ jobs:
         with:
           role-to-assume: arn:aws:iam::087730237728:role/GitHubAction-AssumeRoleWithAction
           aws-region: ${{ env.AWS_REGION }}
-      - name: Sts GetCallerIdentity
-        run: |
-          aws sts get-caller-identity
 
   terraform:
     name: 'Terraform'
     runs-on: ubuntu-latest
+    needs: AssumeRoleAndCallIdentity
     environment: production
 
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
