--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -41,18 +41,14 @@ jobs:
 
       # Generates an execution plan for Terraform
       - name: Terraform Plan
-        env:
-          zone_id: ${{ secrets.TF_VAR_ZONE_ID }}
         run: |
           cd infra
-          terraform plan -input=false
+          terraform plan -input=false -var zone_id=${{ secrets.TF_VAR_ZONE_ID }}
 
         # On push to "main", build or change infrastructure according to Terraform configuration files
         # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
       - name: Terraform Apply
         if: github.ref == 'refs/heads/"main"' && github.event_name == 'push'
-        env:
-          zone_id: ${{ secrets.TF_VAR_ZONE_ID }}
         run: |
           cd infra
-          terraform apply -auto-approve -input=false
+          terraform apply -auto-approve -input=false -var zone_id=${{ secrets.TF_VAR_ZONE_ID }}
