--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -14,6 +14,7 @@ permissions:
 jobs:
   AssumeRoleAndCallIdentity:
     runs-on: ubuntu-latest
+    environment: PROD
     steps:
       - name: Git clone the repository
         uses: actions/checkout@v3
