--- a/package.json
+++ b/package.json
@@ -1,52 +1,32 @@
 {
-  "name": "soccer-results",
-  "version": "0.1.0",
+  "name": "soccer-results-vite",
   "private": true,
+  "version": "0.0.0",
+  "type": "module",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint .",
+    "preview": "vite preview"
+  },
   "dependencies": {
-    "@tailwindcss/postcss": "^4.1.6",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.2.0",
-    "@testing-library/user-event": "^13.5.0",
-    "autoprefixer": "^10.4.21",
-    "lucide-react": "^0.510.0",
-    "npm-run-all": "^4.1.5",
-    "postcss": "^8.5.3",
-    "postcss-cli": "^11.0.1",
-    "postcss-nested": "^7.0.2",
+    "@tailwindcss/vite": "^4.1.11",
+    "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.5.3",
-    "react-scripts": "5.0.1",
-    "tailwindcss": "^4.1.6",
-    "web-vitals": "^2.1.4"
+    "react-router": "^7.6.3",
+    "react-router-dom": "^7.6.3",
+    "tailwindcss": "^4.1.11"
   },
-  "scripts": {
-    "build:css": "postcss src/main.css -o src/index.css",
-    "watch:css": "postcss src/main.css -o src/index.css -w",
-    "start": "npm-run-all -p watch:css start-js",
-    "start-js": "react-scripts start",
-    "build-js": "react-scripts build",
-    "build": "npm-run-all build:css build-js",
-    "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+  "devDependencies": {
+    "@eslint/js": "^9.30.1",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "@vitejs/plugin-react": "^4.6.0",
+    "eslint": "^9.30.1",
+    "eslint-plugin-react-hooks": "^5.2.0",
+    "eslint-plugin-react-refresh": "^0.4.20",
+    "globals": "^16.3.0",
+    "vite": "^7.0.4"
   }
 }
