--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,14 @@ on:
     branches:
       - main
 
+env:
+  
+  AWS_REGION : us-east-1
+
+permissions:
+      id-token: write  
+      contents: read
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
