--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -41,4 +41,4 @@ jobs:
           aws-region: ${{ env.AWS_REGION }}
 
       - name: Deploy to S3
-        run: aws s3 sync build/ s3://ravanhani-soccer-results.s3.us-east-1.amazonaws.com --delete
+        run: aws s3 sync build/ s3://ravanhani-soccer-results --delete
