--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,9 +42,9 @@ jobs:
 
       - name: Create .env file
         run: |
-          echo "VITE_API_URL=${{ secrets.VITE_API_URL }}" >> build/.env
-          echo "VITE_API_KEY=${{ secrets.VITE_API_KEY }}" >> build/.env
+          echo "VITE_API_URL=${{ secrets.VITE_API_URL }}" >> dist/.env
+          echo "VITE_API_KEY=${{ secrets.VITE_API_KEY }}" >> dist/.env
 
 
       - name: Deploy to S3
-        run: aws s3 sync build/ s3://ravanhani-soccer-results --delete
+        run: aws s3 sync dist/ s3://ravanhani-soccer-results --delete
