fix pipeline again

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,6 +32,11 @@ jobs:
       - name: Build React App
         run: npm run build
 
+      - name: Create .env file
+        run: |
+          echo "VITE_API_URL=${{ secrets.VITE_API_URL }}" >> dist/.env
+          echo "VITE_API_KEY=${{ secrets.VITE_API_KEY }}" >> dist/.env
+
       - name: Git clone the repository
         uses: actions/checkout@v3
       - name: configure aws credentials
@@ -40,8 +45,5 @@ jobs:
           role-to-assume: arn:aws:iam::087730237728:role/GitHubAction-AssumeRoleWithAction
           aws-region: ${{ env.AWS_REGION }}
       - name: Deploy to S3
-        run: aws s3 sync / s3://ravanhani-soccer-results --delete
-      - name: Create .env file
-        run: |
-          echo "VITE_API_URL=${{ secrets.VITE_API_URL }}" >> .env
-          echo "VITE_API_KEY=${{ secrets.VITE_API_KEY }}" >> .env
+        run: aws s3 sync dist/ s3://ravanhani-soccer-results --delete
+      
