--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,5 +45,5 @@ jobs:
           role-to-assume: arn:aws:iam::087730237728:role/GitHubAction-AssumeRoleWithAction
           aws-region: ${{ env.AWS_REGION }}
       - name: Deploy to S3
-        run: aws s3 sync dist/ s3://ravanhani-soccer-results --delete
+        run: aws s3 sync dist s3://ravanhani-soccer-results --delete
       
