try to add env again

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -40,10 +40,10 @@ jobs:
       - name: Build React App
         run: npm run build
 
-      # - name: Create .env file
-      #   run: |
-      #     echo "VITE_API_URL=${{ secrets.VITE_API_URL }}" >> dist/.env
-      #     echo "VITE_API_KEY=${{ secrets.VITE_API_KEY }}" >> dist/.env
+      - name: Create .env file
+        run: |
+          echo "VITE_API_URL=${{ secrets.VITE_API_URL }}" >> dist/.env
+          echo "VITE_API_KEY=${{ secrets.VITE_API_KEY }}" >> dist/.env
 
       - name: Deploy to S3
         run: aws s3 sync dist/ s3://ravanhani-soccer-results --delete
